# ai-first-sdlc-practices

./: .dockerignore  .gitignore  .pr-body-phase-f.md  .pre-commit-config.yaml  .yamllint.yml  AGENT-CATALOG.json  AGENT-INDEX.md  AGENT-INSTALLATION-GUIDE.md  AGENT-INSTRUCTION-UPDATES.md  AGENT-MEMORY-BANK.md  AGENTIC-EXCELLENCE-ACTION-PLAN.md  AGENTIC-SDLC-EVOLUTION-VISION.md  AGENTIC-SDLC-TEAM-PRINCIPLES.md  AGENTIC-TEAM-COLLABORATION-PROTOCOLS.md  AGENTIC-TEAM-STANDARDS.md  AI-AUTONOMY.md  AUTOMATIC-TEAM-FIRST-ENFORCEMENT.md  BILLY-WRIGHT-CERTIFICATION-REPORT.md  BILLY-WRIGHT-FINAL-VERDICT.md  CHANGELOG.md  CLAUDE-CONTEXT-agents.md  CLAUDE-CONTEXT-architecture.md  CLAUDE-CONTEXT-bootstrap.md  CLAUDE-CONTEXT-knowledge-base.md  CLAUDE-CONTEXT-language-validators.md  CLAUDE-CONTEXT-levels.md  CLAUDE-CONTEXT-logging.md  CLAUDE-CONTEXT-update.md  CLAUDE-CONTEXT-validation.md  CLAUDE-CONTEXT-workflows.md  CLAUDE-CORE-PROGRESSIVE.md  CLAUDE-CORE.md  CLAUDE-FORCE-TEAM.md  CLAUDE-SETUP.md  CLAUDE-TEAM-FIRST.md  CLAUDE.md  CLEANUP-SUMMARY.md  COMPLETE-SYSTEM-PLAN.md  CONSTITUTION.md  CONTINUATION-CONTEXT.md  (+43 more)
plugins/sdlc-core/: README.md  pyproject.toml
plugins/sdlc-core/.claude-plugin/: plugin.json
plugins/sdlc-core/agents/: code-review-specialist.md  critical-goal-reviewer.md  sdlc-enforcer.md  verification-enforcer.md
plugins/sdlc-core/hooks/: hooks.json
plugins/sdlc-core/scripts/: check-broken-references.py  check-logging-compliance.py  check-tmp-usage.py  session-banner.sh
plugins/sdlc-knowledge-base/: README.md  pyproject.toml
plugins/sdlc-knowledge-base/.claude-plugin/: plugin.json
plugins/sdlc-knowledge-base/agents/: agent-knowledge-updater.md  research-librarian.md  synthesis-librarian.md
plugins/sdlc-knowledge-base/scripts/: answers.py  attribution.py  audit.py  build_shelf_index.py  cited_page_normalize.py  confidence.py  contracts.py  durability.py  embeddings.py  entailment.py  federation.py  federation_accel.py  fingerprint.py  format_version.py  fusion.py  kb_config.py  kb_ingest_batch.py  kb_ingest_bulk.py  kb_layers.py  kb_lint_fix.py  kb_offline_cli.py  kb_prepare_batch.py  kb_stats.py  lint.py  mutation.py  orchestrator.py  pipeline.py  priming.py  prompts.py  provenance.py  publication.py  registry.py  resume.py  retrieval.py  shelf_index_header.py
plugins/sdlc-programme/: CONSTITUTION.md  README.md  manifest.yaml  pyproject.toml
plugins/sdlc-programme/.claude-plugin/: plugin.json
plugins/sdlc-programme/templates/: design-spec.md  requirements-spec.md  test-spec.md
plugins/sdlc-workflows/: .dockerignore  README.md  pyproject.toml
plugins/sdlc-workflows/.claude-plugin/: plugin.json
plugins/sdlc-workflows/commands/: sdlc-synthesise-reviews.md
plugins/sdlc-workflows/docker/: Dockerfile  Dockerfile.base  Dockerfile.full  (+6 more)
test-project-temp/: .gitignore  CLAUDE-CORE-PROGRESSIVE.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
test-project-temp/.sdlc/: agent-manifest.json  level.json
test-project-temp/retrospectives/: template-retrospective.md
test-project-temp/tools/: agent-installer.py  check-feature-proposal.py  context-manager.py  validate-pipeline.py
(+1620 files in other folders)
